--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
     </h2>
 		<section id="week1">
 			<h3>Week 1 (26/4): Background on cell biology and systems biology</h3>
-			<p>In this week, we will provide a brief overview of molecular cell biology and introduce the systems biology approach to modeling biological systems.</p>
+			<p>In this week, we will provide a brief overview of molecular cell biology and introduce the systems biology approach to modeling biological systems. We will explore the issue of modularity in biological regulation. We will also introduce the concept of network motifs and how they are used to understand compelx biological networks.</p>
 		</section>
 
 		<section id="week2">
-			<h3>Week 2 (10/5): Modularity and network motifs</h3>
-			<p>We will explore the issue of modularity in biological regulation. We will also introduce the concept of network motifs and how they are used to understand compelx biological networks. We will analyze the simple motif of negative autoregulation.</p>
+			<h3>Week 2 (10/5): Autoregulation and Negative Feedback</h3>
+			<p>We will analyze the simple motif of negative autoregulation, and explore the implications of negative feedback in biological circuits. <a href="lecture_2_autoregulation.pdf"> Lecture Notes</a></p>
 		</section>
 
 		<section id="week3">
