--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 		</section>
 
 		<section id="week3">
-			<h3>Week 3 (17/5): Feedforward regulation; bistability</h3>
-			<p>We will discuss in detail feedforward regulation, and consider bistability and its role in long-term biological memory.</p>
+			<h3>Week 3 (17/5): Positive feedback</h3>
+			<p>We will discuss positive feedback and its effects on stability, as well as bifurcations, hysteresis, and oscillations.</p>
 		</section>
 
     <section id="week4">
