--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 		<section id="week3">
 			<h3>Week 3 (17/5): Positive feedback</h3>
-			<p>We will discuss positive feedback and its effects on stability, as well as bifurcations, hysteresis, and oscillations.</p>
+			<p>We will discuss positive feedback and its effects on stability, as well as bifurcations, hysteresis, and oscillations.</p> <a href="lecture3.pdf"> Slides</a>
 		</section>
 
     <section id="week4">
