--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section id="week4">
 			<h3>Week 4 (24/5): Robustness in the glucose-insulin system; dynamical compensation</h3>
-			<p>We introduce the fundamental concept of robustness and explore how it can be used to understand human physiology and disease susceptibility, specifically focusing on the glucose-insulin system.</p>
+			<p>We introduce the fundamental concept of robustness and explore how it can be used to understand human physiology and disease susceptibility, specifically focusing on the glucose-insulin system.</p><a href="lecture_4_glucose_insulin.pdf "> Lecture Notes</a></p>
 		</section>
 
     <section id="week5">
