--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 		</section>
 
     <section id="week7">
-      <h3>Week 7 (14/6): Cell state as a high-dimensional attractor</h3>
-      <p>We will consider how the concept of high-dimensional attractors can be used to understand cell-state and cell-fate dynamics. We will present Hopfield networks as toy models for high-dimensional attractors and explore their applicability to biology.</p>
+      <h3>Week 7 (14/6): Self-tuning of long transients in biology</h3>
+      <p>We will consider the topic of long-transients in biological systems and how they can be implemented through collective behavior.</p>
     </section>
 
     <section id="week8">
-      <h3>Week 8 (21/6): Self-tuning of long transients in biology</h3>
-      <p>In the final talk we will consider the topic of long-transients in biological systems and how they can be implemented through collective behavior.</p>
+      <h3>Week 8 (8/6): Cell state as a high-dimensional attractor</h3>
+      <p>In the final talk we will consider how the concept of high-dimensional attractors can be used to understand cell-state and cell-fate dynamics. We will present Hopfield networks as toy models for high-dimensional attractors and explore their applicability to biology.</p>
     </section>
 
     <p>I will be attaching lecture notes, links, etc. after each talk.</p>
