--- a/index.html
+++ b/index.html
@@ -101,10 +101,8 @@
 
     <section id="week8">
       <h3>Week 8 (8/6): Cell state as a high-dimensional attractor</h3>
-      <p>In the final talk we will consider how the concept of high-dimensional attractors can be used to understand cell-state and cell-fate dynamics. We will present Hopfield networks as toy models for high-dimensional attractors and explore their applicability to biology.</p>
+      <p>In the final talk we will consider how the concept of high-dimensional attractors can be used to understand cell-state and cell-fate dynamics. We will present Hopfield networks as toy models for high-dimensional attractors and explore their applicability to biology. <a href="lecture_8_hopfield.pdf"> Lecture Notes</a></p></p>
     </section>
-
-    <p>I will be attaching lecture notes, links, etc. after each talk.</p>
 
 
 
